--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <header class="headtop">
+      <img class="Up" src="./img/logoGrowBe.svg" alt="logoGrowBe" />
       <span class="growbe">
-        <img src="./img/logoGrowBe.svg" alt="logoGrowBe" />
         <p class="grow">Grow</p>
         <p class="be">Be</p>
       </span>
@@ -44,7 +44,7 @@
         <img class="logolink" src="./img/logo3.png" alt="logo3" />
         <img class="logolink" src="./img/logo4.png" alt="logo4" />
         <img class="logolink" src="./img/logo5.png" alt="logo5" />
-        <img class="logolink" src="./img/logo1.png" alt="logo6" />
+        <img class="logolink" src="./img/logo2.png" alt="logo6" />
       </div>
     </footer>
   </body>
