--- a/index.html
+++ b/index.html
@@ -47,5 +47,102 @@
         <img class="logolink" src="./img/logo2.png" alt="logo6" />
       </div>
     </footer>
+    <div class="floor1">
+      <div class="about_us">
+        <div class="f1_b">
+          <div class="f1_bt">
+            <div class="f1_bht">Perfect Solution For Your Business</div>
+            <div class="f1_bst">
+              Distinctively exploit optimal alignments for intuitive bandwidth.
+              Quickly coordinate e-business applications through revolutionary
+              catalysts for chang the Seamlessly underwhelm optimal testing
+              procedures.
+            </div>
+          </div>
+          <button class="learn">Learn More</button>
+        </div>
+        <img src="./img/macbook.svg" alt="macbook" />
+      </div>
+    </div>
+    <div class="floor2">
+      <div class="floor2_block">
+        <img src="./img/Icon1.svg" alt="Icon1" />
+        <div class="f2_btext">
+          <div class="f2_bh">Grow Your Business</div>
+          <div class="f2_bs">
+            Leverage agile frameworks to provide a robust synopsis for high
+            level overviews.
+          </div>
+        </div>
+        <div class="f2_bf"><a href="#">Read More..</a></div>
+      </div>
+      <div class="floor2_block">
+        <img src="./img/Icon2.svg" alt="Icon2" />
+        <div class="f2_btext">
+          <div class="f2_bh">Get Quality Ieads</div>
+          <div class="f2_bs">
+            Leverage agile frameworks to provide a robust synopsis for high
+            level overviews.
+          </div>
+        </div>
+        <div class="f2_bf"><a href="#">Read More..</a></div>
+      </div>
+      <div class="floor2_block">
+        <img src="./img/Icon3.svg" alt="Icon3" />
+        <div class="f2_btext">
+          <div class="f2_bh">Drive More Sales</div>
+          <div class="f2_bs">
+            Leverage agile frameworks to provide a robust synopsis for high
+            level overviews.
+          </div>
+        </div>
+        <div class="f2_bf"><a href="#">Read More..</a></div>
+      </div>
+    </div>
+    <div class="floor3">
+      <div class="f3_text">
+        <div class="f3_th">Why You Should Choose Us.</div>
+        <div class="f3_ts">
+          Distinctively exploit optimal alignments for intuitive bandwidth.
+          Quickly coordinate e-business applications through revolutionary
+          catalysts.
+        </div>
+      </div>
+      <div class="f3_blocks">
+        <div class="f3_b">
+          <img src="./img/b1.svg" alt="b1" />
+          <div class="f3_bd">
+            <div class="f3_bht">Copy Keyword Research</div>
+            <div class="f3_bst">
+              Business applications through revolutionary catalysts for chang
+              the Seamlessly underwhelm dures.
+            </div>
+            <button class="f3_button">Learn More</button>
+          </div>
+        </div>
+        <div class="f3_b">
+          <img src="./img/b1.svg" alt="b1" />
+          <div class="f3_bd">
+            <div class="f3_bht">Copy Keyword Research</div>
+            <div class="f3_bst">
+              Business applications through revolutionary catalysts for chang
+              the Seamlessly underwhelm dures.
+            </div>
+            <button class="f3_button">Learn More</button>
+          </div>
+        </div>
+        <div class="f3_b">
+          <img src="./img/b1.svg" alt="b1" />
+          <div class="f3_bd">
+            <div class="f3_bht">Copy Keyword Research</div>
+            <div class="f3_bst">
+              Business applications through revolutionary catalysts for chang
+              the Seamlessly underwhelm dures.
+            </div>
+            <button class="f3_button">Learn More</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
