--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="f3_b">
           <img src="./img/b1.svg" alt="b1" />
           <div class="f3_bd">
-            <div class="f3_bht">Copy Keyword Research</div>
+            <div class="f3_bht">Keyword Research</div>
             <div class="f3_bst">
               Business applications through revolutionary catalysts for chang
               the Seamlessly underwhelm dures.
@@ -121,9 +121,9 @@
           </div>
         </div>
         <div class="f3_b">
-          <img src="./img/b1.svg" alt="b1" />
+          <img src="./img/b2.svg" alt="b2" />
           <div class="f3_bd">
-            <div class="f3_bht">Copy Keyword Research</div>
+            <div class="f3_bht">Seo Optimazadion</div>
             <div class="f3_bst">
               Business applications through revolutionary catalysts for chang
               the Seamlessly underwhelm dures.
@@ -132,9 +132,9 @@
           </div>
         </div>
         <div class="f3_b">
-          <img src="./img/b1.svg" alt="b1" />
+          <img src="./img/b3.svg" alt="b3" />
           <div class="f3_bd">
-            <div class="f3_bht">Copy Keyword Research</div>
+            <div class="f3_bht">Social Marketing</div>
             <div class="f3_bst">
               Business applications through revolutionary catalysts for chang
               the Seamlessly underwhelm dures.
